--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
     
     <!-- Percobaan Pull -->
+    
+    <!-- Ini faridn23 -->
 
     <!-- ===== Header ===== -->
     <header id="header">
