perubahan dari faridnugroho

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     <!-- Percobaan Pull -->
     
     <!-- Ini faridn23 -->
+    
+    <!-- Ini faridnugroho -->
 
     <!-- ===== Header ===== -->
     <header id="header">
